--- a/bio.html
+++ b/bio.html
@@ -49,11 +49,19 @@
                 </div>
             </div>
     
-            <div class="banner" style="background-image: url(images/eliana.jpg)">
+            <div class="card-2" style="background-image: url(images/eliana.jpg)">
                 <h3>La Eliana</h3>
                 <p>Octubre de 2019</p>
                 
             </div>
+
         </div>
+
+        <footer class="flex-container">
+            <a class="link-footer" href="index.html" target="_blank">Home</a>
+            <a class="link-footer" href="portfolio.html" target="_blank">Portfolio</a>
+            <a class="link-footer" href="contact.html" target="_blank">Contacto</a>
+        </footer>
+
     </body>
     </html>
